--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -110,3 +110,18 @@ ul.flex-direction-nav li{
   .flex-direction-nav .flex-prev {opacity: 1; left: 8px;}
   .flex-direction-nav .flex-next {opacity: 1; right: 8px;  }
 }
+
+.brand-carsuals{background: url("../img/brand-bg1.jpg") no-repeat 0px 0px;	background-size: cover;	min-height: 200px;}
+  #flexiselDemo1, #flexiselDemo2, #flexiselDemo3 {	display:none;}
+  .nbs-flexisel-container {   position: relative;	max-width: 90%;	top: 69px;	margin: 0 auto;}
+  .nbs-flexisel-ul {    position:relative;    width:9999px;    margin:0px;    padding:0px;    list-style-type:none;       text-align:center;  }
+  .nbs-flexisel-inner {    overflow:hidden;    float:left;    width:100%;}
+  .nbs-flexisel-item {    float:left;    margin:0px;    padding:0px;    cursor:pointer;    position:relative;    line-height:0px;}
+  .nbs-flexisel-item img {    width: 100%;    cursor: pointer;    position: relative;    margin-top: 10px;    margin-bottom: 10px;    max-width:100px;    max-height:45px;}
+
+  /*** Navigation ***/
+  .nbs-flexisel-nav-left,
+  .nbs-flexisel-nav-right {    width:50px;    height:92px;     position: absolute;    cursor: pointer;    z-index: 100;    opacity: 0.5;}
+  .nbs-flexisel-nav-left {    left: 10px;    background: url("../img/brand-slider-icons.png") no-repeat;}
+  .nbs-flexisel-nav-right {    right: 5px;    background: url("../img/brand-slider-icons.png") no-repeat -60px 0px;}
+  
